some url changes

--- a/coveragecalc.html
+++ b/coveragecalc.html
@@ -73,9 +73,9 @@
                     for (var j = 0; j < temptypings.length; j++) {
                         if (temptypings[j]["4"].indexOf(types[i]) !== -1) {
                             if (temptypings[j]["type"][1] !== undefined) {
-                                $("#4x").html($("#4x").html() + "<img src=\"pkmntypes/" + getName(temptypings[j]["type"][0]) + ".png\"><img src=\"pkmntypes/" + getName(temptypings[j]["type"][1]) + '.png"><br />');
+                                $("#4x").html($("#4x").html() + "<img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][0]) + ".png\"><img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][1]) + '.png"><br />');
                             } else {
-                                $("#4x").html($("#4x").html() + "<img src=\"pkmntypes/" + getName(temptypings[j]["type"][0]) + '.png"><br />');
+                                $("#4x").html($("#4x").html() + "<img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][0]) + '.png"><br />');
                             }
                             temptypings.splice(j, 1);
                             j--;
@@ -89,9 +89,9 @@
                     for (var j = 0; j < temptypings.length; j++) {
                         if (temptypings[j]["2"].indexOf(types[i]) !== -1) {
                             if (temptypings[j]["type"][1] !== undefined) {
-                                $("#2x").html($("#2x").html() + "<img src=\"pkmntypes/" + getName(temptypings[j]["type"][0]) + ".png\"><img src=\"pkmntypes/" + getName(temptypings[j]["type"][1]) + '.png"><br />');
+                                $("#2x").html($("#2x").html() + "<img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][0]) + ".png\"><img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][1]) + '.png"><br />');
                             } else {
-                                $("#2x").html($("#2x").html() + "<img src=\"pkmntypes/" + getName(temptypings[j]["type"][0]) + '.png"><br />');
+                                $("#2x").html($("#2x").html() + "<img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][0]) + '.png"><br />');
                             }
                             temptypings.splice(j, 1);
                             j--;
@@ -105,9 +105,9 @@
                     for (var j = 0; j < temptypings.length; j++) {
                         if (temptypings[j]["1"].indexOf(types[i]) !== -1) {
                             if (temptypings[j]["type"][1] !== undefined) {
-                                $("#1x").html($("#1x").html() + "<img src=\"pkmntypes/" + getName(temptypings[j]["type"][0]) + ".png\"><img src=\"pkmntypes/" + getName(temptypings[j]["type"][1]) + '.png"><br />');
+                                $("#1x").html($("#1x").html() + "<img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][0]) + ".png\"><img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][1]) + '.png"><br />');
                             } else {
-                                $("#1x").html($("#1x").html() + "<img src=\"pkmntypes/" + getName(temptypings[j]["type"][0]) + '.png"><br />');
+                                $("#1x").html($("#1x").html() + "<img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][0]) + '.png"><br />');
                             }
                             temptypings.splice(j, 1);
                             j--;
@@ -121,9 +121,9 @@
                     for (var j = 0; j < temptypings.length; j++) {
                         if (temptypings[j]["0.5"].indexOf(types[i]) !== -1) {
                             if (temptypings[j]["type"][1] !== undefined) {
-                                $("#05x").html($("#05x").html() + "<img src=\"pkmntypes/" + getName(temptypings[j]["type"][0]) + ".png\"><img src=\"pkmntypes/" + getName(temptypings[j]["type"][1]) + '.png"><br />');
+                                $("#05x").html($("#05x").html() + "<img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][0]) + ".png\"><img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][1]) + '.png"><br />');
                             } else {
-                                $("#05x").html($("#05x").html() + "<img src=\"pkmntypes/" + getName(temptypings[j]["type"][0]) + '.png"><br />');
+                                $("#05x").html($("#05x").html() + "<img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][0]) + '.png"><br />');
                             }
                             temptypings.splice(j, 1);
                             j--;
@@ -137,9 +137,9 @@
                     for (var j = 0; j < temptypings.length; j++) {
                         if (temptypings[j]["0.25"].indexOf(types[i]) !== -1) {
                             if (temptypings[j]["type"][1] !== undefined) {
-                                $("#025x").html($("#025x").html() + "<img src=\"pkmntypes/" + getName(temptypings[j]["type"][0]) + ".png\"><img src=\"pkmntypes/" + getName(temptypings[j]["type"][1]) + '.png"><br />');
+                                $("#025x").html($("#025x").html() + "<img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][0]) + ".png\"><img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][1]) + '.png"><br />');
                             } else {
-                                $("#025x").html($("#025x").html() + "<img src=\"pkmntypes/" + getName(temptypings[j]["type"][0]) + '.png"><br />');
+                                $("#025x").html($("#025x").html() + "<img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][0]) + '.png"><br />');
                             }
                             temptypings.splice(j, 1);
                             j--;
@@ -153,9 +153,9 @@
                     for (var j = 0; j < temptypings.length; j++) {
                         if (temptypings[j]["0"].indexOf(types[i]) !== -1) {
                             if (temptypings[j]["type"][1] !== undefined) {
-                                $("#0x").html($("#0x").html() + "<img src=\"pkmntypes/" + getName(temptypings[j]["type"][0]) + ".png\"><img src=\"pkmntypes/" + getName(temptypings[j]["type"][1]) + '.png"><br />');
+                                $("#0x").html($("#0x").html() + "<img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][0]) + ".png\"><img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][1]) + '.png"><br />');
                             } else {
-                                $("#0x").html($("#0x").html() + "<img src=\"pkmntypes/" + getName(temptypings[j]["type"][0]) + '.png"><br />');
+                                $("#0x").html($("#0x").html() + "<img src=\"/uploads/pkmntypes/" + getName(temptypings[j]["type"][0]) + '.png"><br />');
                             }
                             temptypings.splice(j, 1);
                             j--;
