--- a/pkmntypes.html
+++ b/pkmntypes.html
@@ -53,27 +53,27 @@
                     switch (defenses[i]) {
                         case 4:
                             defenseObj['4'].push(i);
-                            $('#4x').html($('#4x').html() + "<img src=\"pkmntypes/" + getName(i) + ".png\"><br />");
+                            $('#4x').html($('#4x').html() + "<img src=\"/uploads/pkmntypes/" + getName(i) + ".png\"><br />");
                             break;
                         case 2:
                             defenseObj['2'].push(i);
-                            $('#2x').html($('#2x').html() + "<img src=\"pkmntypes/" + getName(i) + ".png\"><br />");
+                            $('#2x').html($('#2x').html() + "<img src=\"/uploads/pkmntypes/" + getName(i) + ".png\"><br />");
                             break;
                         case 1:
                             defenseObj['1'].push(i);
-                            $('#1x').html($('#1x').html() + "<img src=\"pkmntypes/" + getName(i) + ".png\"><br />");
+                            $('#1x').html($('#1x').html() + "<img src=\"/uploads/pkmntypes/" + getName(i) + ".png\"><br />");
                             break;
                         case 0.5:
                             defenseObj['0.5'].push(i);
-                            $('#05x').html($('#05x').html() + "<img src=\"pkmntypes/" + getName(i) + ".png\"><br />");
+                            $('#05x').html($('#05x').html() + "<img src=\"/uploads/pkmntypes/" + getName(i) + ".png\"><br />");
                             break;
                         case 0.25:
                             defenseObj['0.25'].push(i);
-                            $('#025x').html($('#025x').html() + "<img src=\"pkmntypes/" + getName(i) + ".png\"><br />");
+                            $('#025x').html($('#025x').html() + "<img src=\"/uploads/pkmntypes/" + getName(i) + ".png\"><br />");
                             break;
                         case 0:
                             defenseObj['0'].push(i);
-                            $('#0x').html($('#0x').html() + "<img src=\"pkmntypes/" + getName(i) + ".png\"><br />");
+                            $('#0x').html($('#0x').html() + "<img src=\"/uploads/pkmntypes/" + getName(i) + ".png\"><br />");
                             break;
                         default:
                             break;
