fixed google analytics tracking :^)

--- a/coveragecalc.html
+++ b/coveragecalc.html
@@ -297,5 +297,12 @@
         </table>
         <hr />made by jason lam<br /><br />
         images "borrowed" from bulbapedia<br />
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50076663-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-50076663-1');
+        </script>
     </body>
 </html>
