--- a/hackmons.html
+++ b/hackmons.html
@@ -186,5 +186,12 @@ Bold Nature
 - Spore
 - Aromatherapy</textarea>
 		<div class="copyright">created by Jason Lam</div>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50076663-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-50076663-1');
+        </script>
 	</body>
 </html>
