--- a/prefsort.html
+++ b/prefsort.html
@@ -265,5 +265,12 @@
             <span id="vs">vs</span>
             <button id="right"></button></div>
         <div id="results"></div>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50076663-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-50076663-1');
+        </script>
     </body>
 </html>
