--- a/privilegechecker.html
+++ b/privilegechecker.html
@@ -55,5 +55,13 @@
 			<p><input type="checkbox" id="box" /><label for="box"> YOUR PRIVILEGE</label></p>
 			<p id="counter">You've checked your privilege <span id="num">0</span> times today.</p>
 		</div>
+
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50076663-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-50076663-1');
+        </script>
 	</body>
 </html>
