--- a/rotator.html
+++ b/rotator.html
@@ -154,5 +154,13 @@
 		<div id="shift24"></div>
 		<div id="shift25"></div>
 		<div id="footer">perngrq ol <a href="https://3edgy6u.com">wnfba ynz</a></div>
+
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50076663-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-50076663-1');
+        </script>
 	</body>
 </html>
