--- a/starterpack.html
+++ b/starterpack.html
@@ -12,14 +12,6 @@
 		</style>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-			ga('create', 'UA-50076663-1', 'auto');
-			ga('send', 'pageview');
-			
 			var MAXDIM = 200;
 			function insertImage(i, c, n) {
 				$(i).on("load", function() {
@@ -84,5 +76,12 @@
 		<button id="gen" type="button">Generate</button>
 		<hr />
 		<canvas id="s" height="475px" width="475px"></canvas>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50076663-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-50076663-1');
+        </script>
 	</body>
 </html>
