--- a/circleifier.html
+++ b/circleifier.html
@@ -158,5 +158,12 @@
 		<div id="fullwidth"></div>
 		<div id="footer">&#9426;&#9441;&#9428;&#9424;&#9443;&#9428;&#9427;&#8195;&#9425;&#9448;&#8195;<a href="
 			https://3edgy6u.com">&#9433;&#9424;&#9442;&#9438;&#9437;&#8195;&#9435;&#9424;&#9436;</a></div>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50076663-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-50076663-1');
+        </script>
 	</body>
 </html>
