--- a/fullwidth.html
+++ b/fullwidth.html
@@ -149,5 +149,12 @@
 		<div id="fullwidth"></div>
 		<div id="footer">&#65347;&#65362;&#65349;&#65345;&#65364;&#65349;&#65348;&#8195;&#65346;&#65369;&#8195;<a href="
 			https://3edgy6u.com">&#65354;&#65345;&#65363;&#65359;&#65358;&#8195;&#65356;&#65345;&#65357;</a></div>
-	</body>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50076663-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-50076663-1');
+        </script>
+</body>
 </html>
