--- a/polyatomics.html
+++ b/polyatomics.html
@@ -57,5 +57,12 @@
 	<body>
 		<button id="reload">RELOAD</button> <button id="solutions">SOLUTIONS</button>
 		<div style="width: 100%"></div>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50076663-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-50076663-1');
+        </script>
 	</body>
 </html>
