--- a/youtubemult.html
+++ b/youtubemult.html
@@ -16,13 +16,6 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
 		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-			ga('create', 'UA-50076663-1', 'auto');
-			ga('send', 'pageview');
 			videos = [];
 			players = [];
 			delays = [];
@@ -118,5 +111,12 @@
 			<button id="add" type="button">Add Video</button><br/>
 			<input type="submit" />
 		</form>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50076663-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-50076663-1');
+        </script>
 	</body>
 </html>
