--- a/rotator.html
+++ b/rotator.html
@@ -153,7 +153,7 @@
 		<div id="shift23"></div>
 		<div id="shift24"></div>
 		<div id="shift25"></div>
-		<div id="footer">perngrq ol <a href="https://3edgy6u.com">wnfba ynz</a></div>
+		<div id="footer">perngrq ol <a href="https://jasonl.net">wnfba ynz</a></div>
 
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50076663-1"></script>
         <script>
